Updated css styles to fix some minor layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -8,34 +8,21 @@ body {
   background-color: rgba(0, 0, 0, 0.885);
 }
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 header {
   background-image: url('./images/popcorn.jpg');
   background-size: 690px;
   height: 200px;
   margin-bottom: 10px;
-  opacity: 0.6;
-  padding: 20px;
-  z-index: -1;
+  padding: 5px 20px 20px 20px;
 }
 
 .heading {
   color: rgb(255, 255, 255);
   font-family: 'Russo One', sans-serif;
   font-size: 35px;  
-  position: absolute;
   display: inline-block;
   top: 10px;
   margin: auto;
-  width: 30%;
   z-index: 3;  
 }
 
@@ -43,17 +30,22 @@ header {
   font-size: large;
 }
 
-.nav {
-  color: rgb(169, 0, 0);
-  font-size: 18px;
-  margin: 0 0 0px 20px;
-  position: relative;
-  left: 600px;
-  top: -190px;
+.logo{
+  color: #fff;
+  text-decoration: none;
+  font-size: 35px;
+  font-weight: bold;
+  width: 140px;
+  display: block;
+  margin: 0 0 30px 0;
+  background-color: #000;
 }
 
-.nav:hover {
-  color: rgb(255, 2, 2);
+.login{
+  position: absolute;
+  top: 20px; 
+  right: 30px;
+  color: #fff;
 }
 
 .active {
